# hamlet-loyalty

./: .gitignore  Dockerfile.build  README.md  docker-compose-installed.yaml  docker-compose.yaml  package.json
.circleci/: config.yaml  config.yml
.scripts/: codecov.sh  setup-db
client/: package.json
client/.next/: build-manifest.json
client/lib/: init-apollo.js
client/nextjs/: package.json
client/pages/: _app.js  about.js  index.js
client/reactjs/: package.json
client/variables/: charts.jsx
hamlet-backend-services/: k8-hamlet-backend-stateful.yaml
hamlet-backend-services/sawtooth-rethinkdb-kb/: Dockerfile
hamlet-frontend/: package.json
hamlet-frontend-app/: .amplifyrc  .graphqlconfig.yml  package.json
hamlet-frontend-app/src/: API.js
hamlet-graphql/js-graphql/: .babelrc  .gitignore  Dockerfile  package.json  tsconfig.old
hamlet-graphql/rust-graphql/: Cargo.toml
hamlet-graphql/rust-graphql/src/: lib.rs
hamlet-graphql/rust-graphql/src/schema/: mod.rs
hamlet-graphql/rust-graphql/src/schema/sawtooth/: asset.rs  common.rs  mod.rs
hamlet-graphql/rust-graphql/src/schema/wordpress/: common.rs  media.rs  page.rs
hamlet-ledger-backend/: k8-hamlet-backend-services.yaml
hamlet-ledger-backend/sawtooth-rethinkdb-kb/: Dockerfile.build  Makefile  probe.go  ready-probe.sh  run.sh
hamlet-music-msa/: Dockerfile  README.md
hamlet-music-msa/code/: Cargo.toml  Dockerfile  build.sh  convenient_fetch.js  index.html  index.js  webpack.config.js
hamlet-music-msa/code/src/: lib.rs  main.rs
hamlet_ledger_sync/: Dockerfile  package.json
hamlet_ledger_sync/src/: index.js
kubernetes/kubernetes-configs/: kops-cluster-dev.yaml  kops-cluster.yaml  setup.yaml
protos/: holding.proto  payload.proto
sawtooth-backend/: k8-sawtooth-services.yaml
sawtooth-backend-services/: k8-sawtooth-deployment.yaml
sawtooth-backend-services/hamlet-tp/: README.md
sawtooth-backend-services/hamlet-tp/processor/: Cargo.toml  Dockerfile  Dockerfile-installed  hamlet_loyalty_sc.yaml
sawtooth-backend-services/hamlet-tp/processor/protos/: offer.proto  payload.proto  property.proto  proposal.proto  smart_permission.proto
sawtooth-backend-services/hamlet-tp/processor/src/: hamlet_handler.rs  hamlet_payload.rs  hamlet_state.rs  lib.rs
sawtooth-backend-services/hamlet-tp/processor/src/handlers/: account_state.rs  asset_state.rs  holding_state.rs  offer_state.rs  record_type_state.rs
sawtooth-backend-services/hamlet-tp/processor/src/protos/: holding.rs  mod.rs  offer.rs  payload.rs  proposal.rs  record.rs  smart_permission.rs
sawtooth-backend-services/hamlet-tp/processor/src/std_ext/: addressing.rs  handle.rs  mod.rs
src/: handler.js  index.js
(+190 files in other folders)
