[package]
name = "hamlet-music-msa"
version = "0.1.0"
authors = ["Colin <colincmcc@gmail.com>"]

[profile.release]
lto = "thin"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "0.2.19", features = ["nightly"]}
serde = "1.0.67"
serde_derive = "1.0.67"
serde_json = "1.0.22"
lazy_static = "1.0.1"
graphql_client = "0.5.1"

[workspace]
members = ["."]