[package]
name = "hamlet-tp"
version = "0.1.0"
authors = ["Colin <hello@colinmac.me>"]
edition = "2018"
build = "build.rs"

[lib]
path = "src/lib.rs"
name = "lib_hamlet"

[[bin]]
path = "src/bin/main.rs"
name = "bin_hamlet"

[dependencies]
clap = "2.32.0"
protobuf = { version = "2.2.4", features = ["with-bytes", "with-serde"] }
cfg-if = "0.1.6"

[build-dependencies]
protoc-rust = "2.2.4"
glob = "0.2.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sabre-sdk = "0.1.3"
rust_crypto = {git = "https://github.com/agunde406/rust-crypto", branch="wasm_sha2"}


[target.'cfg(target_family = "unix")'.dependencies]
rust-crypto = "0.2.36"
log = "0.4.6"
log4rs = "0.8.1"
zmq = "0.8.2"
sawtooth-sdk ="0.1.0"
sawtooth-zmq = "0.8.2-dev5"
rustc-serialize = "0.3.22"

[target.'cfg(target_family = "windows")'.dependencies]
rust-crypto = "0.2.36"
log = "0.4.6"
log4rs = "0.8.1"
zmq = "0.8.2"
sawtooth-sdk ="0.1.0"
sawtooth-zmq = "0.8.2-dev5"
rustc-serialize = "0.3.22"
